<?xml version="1.0"?>
<package format="3">
  <name>nav2_benchmark</name>
  <version>0.0.1</version>
  <description>Benchmark of Nav2 local planners (DWB, MPPI, RPP).</description>
  <maintainer email="you@example.com">obai</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
